<resources>
    <string name="app_name">YFMA</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="Login">Login</string>
    <string name="signup">Signup</string>
    <string name="loginhere">loginhere</string>
    <string name="email">email</string>
    <string name="fullname">fullname</string>
    <string name="signuphere">signup</string>
    <string name="welcome">WELCOME</string>
    <string name="Email">Email</string>
    <string name="Storename">Storename</string>
    <string name="Fullname">Fullname</string>
    <string name="Phone">Phone</string>
    <string name="Address">Address</string>
    <string-array name="store_status">
        <item>InActive</item>
        <item>Active</item>
    </string-array>
    <string-array name="sorting_rating">
        <item>HIGHEST TO LOWEST</item>
        <item>LOWEST TO HIGHEST</item>
    </string-array>

    <string-array name="account_type">
        <!--        <item>User</item>-->
        <!--        <item>Store Owner</item>-->
        <!--        <item>Rider</item>-->
        <item>Customer</item>
        <item>Shop Owner</item>
        <item>Delivery Guy</item>
    </string-array>
    <string-array name="sorting">
        <!--        <item>User</item>-->
        <!--        <item>Rider</item>-->
        <!--        <item>STAFF</item>-->
        <item>Customer</item>
        <item>Delivery Guy</item>
        <item>Shop Staff</item>
    </string-array>
    <string name="title_activity_riders_frame">riders_frame</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="title_activity_order_details">order_details</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_rating_store">rating_store</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="alert_dialog_two_buttons_title">Sample</string>
</resources>